# anomaly-internal-detection

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
docs/dossier_papers/: 01_resumen_ejecutivo.md  02_resultados_completos.md  03_metodologia_lpi_v1.md  04_metodologia_nf_ensemble.md  05_datasets.md  06_audit_trail.md  07_baselines_actuales.md  08_papers_a_citar.md  09_gaps_y_pendientes.md  10_estructura_repo.md  11_baselines_kplabs.md
experiments/s1_baselines/: run_baselines.py
experiments/s1_kplabs_baselines/: dif_vs_nf_significance.py  run_kplabs_baselines.py
experiments/s2_lpi/: run_lpi_opssat.py
experiments/s2_lpi_v2/: compare_extensions.py  run_nf_seed_ensemble.py
experiments/s2_transformer/: run_threshold_sweep.py  run_transformer_smoke.py  run_transformer_v2.py
experiments/s3_esa_adb/: _mem_monitor.py  prepare_mission1.py  prepare_mission1_raw.py  rf_baseline.py  run_ae_lpi.py  run_nf_ensemble_s3.py
experiments/s3_transformer/: explore_esa_ad.py
notebooks/: 01_explore_segments.ipynb  01_explore_segments_executed.ipynb  02_val_test_distribution_shift.ipynb  03_lpi_integrity_audit.ipynb  04_nf_integrity_audit.ipynb
src/data/: loader.py
src/evaluation/: metrics.py
src/models/: conv_autoencoder.py  lpi.py  lpi_v2.py  transformer_ad.py
tests/: test_lpi.py  test_lpi_v2.py  test_nf_ensemble.py  test_no_length_leakage.py
