[project]
name = "anomaly-internal-detection"
version = "0.1.0"
description = "ML-based anomaly detection for satellite telemetry"
requires-python = ">=3.11"

dependencies = [
    # Data & ML
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "scipy>=1.13",
    "torch>=2.2",
    "pyod>=1.1",
    "xgboost>=2.0",
    # Experiment tracking
    "mlflow>=2.10",
    "optuna>=3.5",
    # Viz
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis>=5.0",
    # Utilities
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
